=== Safari-93 ===

2003-08-14  Vicki Murley  <vicki@apple.com>

        Reviewed by John. 

        * WebKit.pbproj/project.pbxproj: deleted WebKit.order from the project.

2003-08-14  Vicki Murley  <vicki@apple.com>

        Reviewed by John. 

        * WebKit.order: Removed. We now point to the WebKit order file in /AppleInternal/OrderFiles.
        * WebKit.pbproj/project.pbxproj: set sectorder flag to point to /AppleInternal/OrderFiles/WebKit.order

2003-08-14  Darin Adler  <darin@apple.com>

        Reviewed by Chris.

        - fixed 3344259 -- flipped image when copying from Safari in 1000s of colors mode

        The workaround is to turn off the NSImage cache. Andrew says this won't have any
        practical repercussions other than making the bug go away.
        
        Seems to have a side effect of speeding up the cvs-base page load test!

        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer initWithMIMEType:]): Set mode to NSImageCacheNever.
        (-[WebImageRenderer initWithData:MIMEType:]): Ditto.
        (-[WebImageRenderer initWithContentsOfFile:]): Ditto.
        (-[WebImageRenderer _adjustSizeToPixelDimensions]): Don't set mode to NSImageCacheDefault.

2003-08-14  Ken Kocienda  <kocienda@apple.com>

        Reviewed by Darin

	Fix for this bug:

	<rdar://problem/3375042>: Change usages of NSURL absoluteString in WebKit 
	to use improved variants

        * History.subproj/WebHistoryItem.m:
        (-[WebHistoryItem initWithURL:title:]): Use data-as-string.
        (-[WebHistoryItem initWithURL:target:parent:title:]): Use data-as-string.
        (-[WebHistoryItem setURL:]): Use data-as-string.
        * History.subproj/WebHistoryPrivate.m:
        (-[WebHistoryPrivate addItem:]): Remove FIX_VISITED ifdef
        (-[WebHistoryPrivate removeItem:]): Ditto
        (-[WebHistoryPrivate containsURL:]): Ditto. Use data-as-string.
        (-[WebHistoryPrivate itemForURL:]): Ditto. Ditto.